// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Different data provided to link elements results in different components Successfully renders Gatsby links 1`] = `
<a
  className="sc-crHmcD cempGn"
  href="https://www.ably.com/documentation/lorem"
>
  Lorem ipsum
</a>
`;

exports[`Different data provided to link elements results in different components Successfully renders normal links 1`] = `
<a
  className="sc-egiyK gtCxvJ"
  href="https://www.example.com"
>
  Lorem ipsum
</a>
`;
